[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/enemy_Shoot.gd" type="Script" id=1]
[ext_resource path="res://player/projectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/flyenem.png" type="Texture" id=3]
[ext_resource path="res://Enemy/flying_enemy.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 40.6332

[node name="flying_enemy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Shoot" type="Node2D" parent="."]
script = ExtResource( 1 )
projectile = ExtResource( 2 )

[node name="fire_point" type="Node2D" parent="Shoot"]
position = Vector2( 99.5472, 0 )

[node name="fire_rate" type="Timer" parent="Shoot"]
wait_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="flyenem" type="Sprite" parent="."]
position = Vector2( -0.0932617, -0.145744 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Shoot/fire_rate" to="Shoot" method="_on_fire_rate_timeout"]
